Added expense management to Dashboard and User